# AssetX

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _config.yml  activate_assetx.bat  analyze_core_structure.py  debug_flow.py  debug_franka_positions.py  debug_position.py  debug_position_fixed.py  environment.yml  index.md  pre_upload_check.py  pyproject.toml  pytest.ini  test_fixed_viz.py  test_franka_usd.py  test_install.py  test_visuals_support.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assetx/: __init__.py  cli.py
assetx/core/: __init__.py  asset.py  asset_new.py  asset_original.py  converter.py  enums.py  meta.py  property.py  queries.py  schemas.py  stage.py  usd_to_urdf_converter.py  validator.py
assetx/mesh/: processor.py
assetx/meta/: manager.py
assetx/viewer/: preview.py
docs/: QUICK_START.md  README.md  assetx_usd_mapping.md  cli-reference.md  development.md  documentation_update_report.md  faq.md  geometry_rendering_architecture.md  installation.md  meta_schema.md  overview.md  quickstart.md  troubleshooting.md  usd_architecture_guide.md  usd_setup_guide.md
docs/advanced/: workflows.md
docs/api/: README.md  asset.md
docs/case-studies/: real-world-examples.md
docs/features/: USD_FEATURE_SUMMARY.md  USD_TO_URDF_IMPROVEMENTS.md
docs/internal/: asset_refactor_report.md  ci_fix_report.md  demo_fix_report.md  file_organization_report.md  test_fix_report.md
docs/setup/: GITHUB_SETUP.md
examples/: README.md  basic_usage.py  demo_geometry.py  demo_usd_to_urdf.py  meta.yaml  simple_test.py  simple_usd_test.py  simple_visualization.py
scripts/: README.md  activate_assetx.ps1  activate_assetx.py  fix_conda_path.py
tests/: README.md  __init__.py  run_tests.py  test_basic.py  test_usd_loading.py  test_usd_simple.py
tests/demos/: __init__.py  demo_basic_usage.py  demo_usd_features.py
tests/integration/: __init__.py  test_usd_asset.py  test_usd_asset_integration.py
tests/unit/: __init__.py  test_asset_prim.py  test_asset_property.py  test_complete_robot.py  test_render.py  test_sdf_path.py
(+31 files in other folders)
